<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Quiz App</string>

    <!-- Title of quiz. [CHAR LIMIT=20] -->
    <string name="quiz_title">Google \'Google\'</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>

    <!-- Score header. [CHAR LIMIT=20] -->
    <string name="score_header">Score</string>

    <!-- Current score tracker. [CHAR LIMIT=20] -->
    <string name="current_score">0</string>

    <!-- Score header. [CHAR LIMIT=20] -->
    <string name="question_header">Question</string>

    <!-- Current score tracker. [CHAR LIMIT=20] -->
    <string name="current_question">1/10</string>

    <!-- Question #1 [CHAR LIMIT=NONE] -->
    <string name="question_1">Google was founded by whom?</string>

    <!-- Question #1 Option #1 [CHAR LIMIT=NONE] -->
    <string name="question_1_option_1">Steve Jobs and Tim Cook</string>

    <!-- Question #1 Option #2 [CHAR LIMIT=NONE] -->
    <string name="question_1_option_2">Larry Page and Sergey Brin</string>

    <!-- Question #1 Option #3 [CHAR LIMIT=NONE] -->
    <string name="question_1_option_3">Andy Rubin and Rich Miner</string>

    <!-- Question #1 Option #4 [CHAR LIMIT=NONE] -->
    <string name="question_1_option_4">Amir Shinar and Uri Levine</string>

    <!--&lt;!&ndash; Question #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_2">When was Google founded?</string>-->

    <!--&lt;!&ndash; Question #2 Option #1 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_2_option_1">September 1, 1998</string>-->

    <!--&lt;!&ndash; Question #2 Option #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_2_option_2">September 2, 1998</string>-->

    <!--&lt;!&ndash; Question #2 Option #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_2_option_3">September 3, 1998</string>-->

    <!--&lt;!&ndash; Question #2 Option #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_2_option_4">September 4, 1998</string>-->

    <!--&lt;!&ndash; Question #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_3">Which term was Google derived from?</string>-->

    <!--&lt;!&ndash; Question #3 Option #1 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_3_option_1">googol</string>-->

    <!--&lt;!&ndash; Question #3 Option #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_3_option_2">gooogle</string>-->

    <!--&lt;!&ndash; Question #3 Option #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_3_option_3">googel</string>-->

    <!--&lt;!&ndash; Question #3 Option #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_3_option_4">gogle</string>-->

    <!--&lt;!&ndash; Question #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_4">What was the original name of Google?</string>-->

    <!--&lt;!&ndash; Question #4 Option #1 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_4_option_1">Yahoo</string>-->

    <!--&lt;!&ndash; Question #4 Option #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_4_option_2">Backrub</string>-->

    <!--&lt;!&ndash; Question #4 Option #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_4_option_3">Bing</string>-->

    <!--&lt;!&ndash; Question #4 Option #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_4_option_4">Ask</string>-->

    <!--&lt;!&ndash; Question #5 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_5">Why are there goats on the lawns at the Mountain View HQ?</string>-->

    <!--&lt;!&ndash; Question #5 Option #1 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_5_option_1">To entertain visitors during open house</string>-->

    <!--&lt;!&ndash; Question #5 Option #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_5_option_2">To provide fresh milk to the employees</string>-->

    <!--&lt;!&ndash; Question #5 Option #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_5_option_3">To keep employees calm and focus</string>-->

    <!--&lt;!&ndash; Question #5 Option #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_5_option_4">To mow the lawns as part of Google\'s green initiative</string>-->

    <!--&lt;!&ndash; Question #6 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_6">What was the first ever Google Doodle?</string>-->

    <!--&lt;!&ndash; Question #6 Option #1 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_6_option_1">Fall Equinox</string>-->

    <!--&lt;!&ndash; Question #6 Option #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_6_option_2">Burning Man stick figure</string>-->

    <!--&lt;!&ndash; Question #6 Option #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_6_option_3">Pac-Man</string>-->

    <!--&lt;!&ndash; Question #6 Option #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_6_option_4">Claude Monet</string>-->

    <!--&lt;!&ndash; Question #7 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_7">The original Google computer storage was built with what?</string>-->

    <!--&lt;!&ndash; Question #7 Option #1 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_7_option_1">Legos</string>-->

    <!--&lt;!&ndash; Question #7 Option #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_7_option_2">Nanoblocks</string>-->

    <!--&lt;!&ndash; Question #7 Option #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_7_option_3">Duplo</string>-->

    <!--&lt;!&ndash; Question #7 Option #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_7_option_4">Minecraft</string>-->

    <!--&lt;!&ndash; Question #8 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_8">When was \'Google\' added as a verb in the Oxford English Dictionary?</string>-->

    <!--&lt;!&ndash; Question #8 Option #1 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_8_option_1">February 2000</string>-->

    <!--&lt;!&ndash; Question #8 Option #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_8_option_2">August 2002</string>-->

    <!--&lt;!&ndash; Question #8 Option #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_8_option_3">April 2004</string>-->

    <!--&lt;!&ndash; Question #8 Option #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_8_option_4">June 2006</string>-->

    <!--&lt;!&ndash; Question #9 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_9">What is the nickname of Google\'s new employees?</string>-->

    <!--&lt;!&ndash; Question #9 Option #1 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_9_option_1">Nooglers</string>-->

    <!--&lt;!&ndash; Question #9 Option #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_9_option_2">Googlers</string>-->

    <!--&lt;!&ndash; Question #9 Option #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_9_option_3">Backrubbers</string>-->

    <!--&lt;!&ndash; Question #9 Option #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_9_option_4">Freshmen</string>-->

    <!--&lt;!&ndash; Question #10 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_10">What is the unofficial slogan of Google?</string>-->

    <!--&lt;!&ndash; Question #10 Option #1 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_10_option_1">\'Do the right thing\'</string>-->

    <!--&lt;!&ndash; Question #10 Option #2 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_10_option_2">\'You can make money without doing evil\'</string>-->

    <!--&lt;!&ndash; Question #10 Option #3 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_10_option_3">\'Don\'t be evil\'</string>-->

    <!--&lt;!&ndash; Question #10 Option #4 [CHAR LIMIT=NONE] &ndash;&gt;-->
    <!--<string name="question_10_option_4">\'Think different\'</string>-->

</resources>
