<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/quiz_title"
            android:textSize="35sp"
            android:textColor="#4689C8"
            android:textStyle="bold"
            android:gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_header"
                android:textSize="20sp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/current_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/current_score"
                android:textSize="20sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_header"
                android:textSize="20sp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/current_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/current_question"
                android:textSize="20sp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="20dp"
            android:text="@string/question_1"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#4689C8"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/option_1_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_option_1"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/option_2_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_option_2"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/option_3_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_option_3"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/option_4_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_option_4"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

    </LinearLayout>

</ScrollView>